force-app/main/default/objects/Deal__c/fields/Next_Activity__c.field-meta.xml
<CustomField>
    <fullName>Next_Activity__c</fullName>
    <label>Next Activity</label>
    <type>Date</type>
</CustomField>