force-app/main/default/objects/Deal__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Market</fullName>
            </value>
            <value>
                <fullName>In-Market</fullName>
            </value>
            <value>
                <fullName>Initial Closing</fullName>
            </value>
            <value>
                <fullName>Final Closing</fullName>
            </value>
            <value>
                <fullName>Active Fund</fullName>
            </value>
            <value>
                <fullName>Historical Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>