force-app/main/default/objects/Deal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Last_Activity__c</columns>
    <columns>Last_Activity_Subject__c</columns>
    <columns>Next_Activity__c</columns>
    <columns>Next_Step__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Deals</label>
</ListView>